<?xml version="1.0" encoding="utf-8"?>
<!--
 strings.xml
 LinuxDayOSM
 Copyright (C) Stefano Salvi 2012 <stefano@salvi.mn.it>

 LinuxDayOSM is free software: you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the
 Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 LinuxDayOSM is distributed in the hope that it will be useful, but
 WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 See the GNU General Public License for more details.

 You should have received a copy of the GNU General Public License along
 with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
<resources>

    <string name="hello">Hello World, LinuxDayOSMActivity!</string>
    <string name="app_name">LinuxDayOSM</string>
    <string name="Organization">Organizzazione :</string>
    <string name="Location">Luogo :</string>
    <string name="Address">Indirizzo :</string>
    <string name="City">Città :</string>
    <string name="URL">Sito WEB :</string>
    <string name="close">Chiudi</string>
    <string name="RepositoryName">http://www.linuxday.it/data/</string>
    <string name="RepositoryNameOld">http://www.linuxday.it/2011/data/</string>
    <string name="LugMapRepositoryName">http://lugmap.it/dati.txt</string>
    <string name="BMNetRepositoryName">http://businessmap.it/dati_networking.txt</string>
    <string name="BMDevRepositoryName">http://businessmap.it/dati_sviluppo.txt</string>
    <string name="BMWebRepositoryName">http://businessmap.it/dati_web.txt</string>
    <string name="BMEduRepositoryName">http://businessmap.it/dati_formazione.txt</string>
    <string name="BMPrjRepositoryName">http://businessmap.it/dati_consulenza.txt</string>
    <string name="CalendarRepositoryName">http://calendar.lugmap.it/forge/events/geoevents.txt</string>
    <string name="ILSref"><![CDATA[<h1>ITALIAN LINUX SOCIETY</h1>http://www.linux.it]]></string>
    <string name="GreetingText"><![CDATA[<h2>LinuxDayApp</h2>
        <b>Autore:</b> Stefano Salvi mailto:<u>stefano.salvi@linux.it</u><br/>Rilasciato con licenza <b>GPL</b>: <u>http://www.gnu.org/licenses/gpl.html</u><br />
        Il codice sorgente pu&ograve; essere scaricato all\'indirizzo <u>https://github.com/DocSalvi/LinuxDayAppAndroid</u><br />
        Le mappe sono scaricate dal progetto <b>OpenStreetMap</b>: <u>http://www.openstreetmap.org/</u>]]></string>
    <string name="LogoDescription">Logo del LinuxDay</string>
    <string name="LinuxDayDate">LinuxDay 2012 – 27 Ottobre</string>
    <string name="LinuxDayDescription">Linux Day</string>
    <string name="LugDescription">Linux User Group</string>
    <string name="HereDescription">La tua posizione</string>
    <string name="BMNetDescription">Business Map – Networking</string>
    <string name="BMDevDescription">Business Map – Sviluppo Software</string>
    <string name="BMWebDescription">Business Map – Web</string>
    <string name="BMEduDescription">Business Map – Formazione</string>
    <string name="BMPrjDescription">Business Map – Consulenza</string>
    <string name="CalendarDescription">Calendario Eventi</string>
    <string name="CalendarDescriptionOld">Calendario Eventi - Passati</string>
    <string name="LinuxDayDialog"><![CDATA[<p><b>Organizzazione: </b>%1$s</p><p><b>Luogo: </b>%2$s</b><p><b>Indirizzo: </b>%3$s</p><p><b>Città: </b>%4$s</p><p><b>Sito WEB: </b>%5$s</p>]]></string>
    <string name="LugDialog"><![CDATA[<p><b>Organizzazione: </b>%1$s</p><p><b>Sito WEB: </b>%2$s</p>]]></string>
    <string name="CalendarDialog"><![CDATA[<p><b>Data: </b>%1$s</p><p><b>Evento: </b>%2$s</p><p><b>Sito WEB: </b>%3$s</p>]]></string>
    <string name="CloseLegendaDescription">Chiudi la legenda</string>
    <string name="open_legenda_description">Apri la Legenda</string>
    <string name="LugTitle">Linux Users Group &#8230;</string>
    <string name="BMDevTitle">Sviluppo sotto Linux &#8230;</string>
    <string name="BMEduTitle">Corsi su Linux &#8230;</string>
    <string name="BMNetTitle">Connettività con Linux &#8230;</string>
    <string name="BMPrjTitle">Consulenza su Linux &#8230;</string>
    <string name="BMWebTitle">Siti Web con Linux &#8230;</string>
    <string name="CalendarTitle">Evento &#8230;</string>
    <color name="lightgrey">#cccccc</color>
    <color name="black">#000000</color>
</resources>
