<?xml version="1.0" encoding="utf-8"?>
<!--
 greeting.xml
 LinuxDayOSM
 Copyright (C) Stefano Salvi 2012 <stefano@salvi.mn.it>

 LinuxDayOSM is free software: you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the
 Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 LinuxDayOSM is distributed in the hope that it will be useful, but
 WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 See the GNU General Public License for more details.

 You should have received a copy of the GNU General Public License along
 with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/lightgrey"
    android:textColor="@color/black" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/close"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightgrey"
            android:textColor="@color/black" >

            <ImageView
                android:id="@+id/LDLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="22dp"
                android:contentDescription="@string/LogoDescription"
                android:src="@drawable/linuxday" />

            <TextView
                android:id="@+id/ILS"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/info"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/LDLogo"
                android:autoLink="web"
                android:gravity="center"
                android:text="@string/ILSref"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/LDLogo"
                android:autoLink="web|email"
                android:gravity="center"
                android:text="@string/GreetingText"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black" />
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/info"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:text="@string/close" />

</RelativeLayout>